--- a/WO3_analysis_of_expexperimental_data/analysis_of_data_XRD_CV_CP.ipynb
+++ b/WO3_analysis_of_expexperimental_data/analysis_of_data_XRD_CV_CP.ipynb
@@ -1754,6 +1754,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "16d03eb1",
+   "metadata": {},
+   "source": [
+    "# The results of the experiment cannot be fitted by the theory\n",
+    "This can be due to the uncertainty un the x value, which can not be calculated accurately due to two main factors:\n",
+    "\n",
+    "- Low porosity of the film (The intercalating atoms may not be ).\n",
+    "- Unknown density of the film\n",
+    "\n",
+    "Additionally it is worth noticing that the behavior of the voltage during this experiment is not well-understood."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3a07c72a",
    "metadata": {},
    "source": [
