--- a/fourier_analysis/fourier_summary.ipynb
+++ b/fourier_analysis/fourier_summary.ipynb
@@ -629,12 +629,14 @@
    "metadata": {},
    "source": [
     "As can be seen, the frequencies are around 24h (this can change depending on the solar activity of the last 7 days). This can be explained by the solar cosmic particle radiation, that affects the intensity (and shape) of the earth's magnetic field in the following way:\n",
+    "\n",
     "When the solar wind and other cosmic radiation interacts with the earth's magnetic field it can magnify the magnetic field in the region where the geostationary orbits are located on the side of the incoming solar wind, and decrease the intensity of the magnetic on the oposite side (the night side). See figure below:\n",
-    "\n"
+    "\n",
+    "\n",
     "![image.png](attachment:image.png)\n",
-    "\n"
-    "Since the data is obtained from a geostationary orbit, the satelite that collects the data rotates with the earth\n",
-    "and therefore experiences these changes of the magnetic field as it traslates to the side of the solar wind to the darkside and viceversa. As a result this effect is generated because of the noninertial reference fram of the satelites that collect the data.\n",
+    "\n",
+    "\n",
+    "Since the data is obtained from a geostationary orbit, the satelite that collects the data rotates with the earth and therefore experiences these changes of the magnetic field as it traslates to the side of the solar wind to the darkside and viceversa. As a result this effect is generated because of the noninertial reference fram of the satelites that collect the data.\n",
     "\n",
     "Using this example it can be seen that the fourier transform of a signal is not always as clear as the invented signal at the begining of this notebook, it is usually full of noise and the frequency peaks are not necesssarily well defined."
    ]
